--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "Baraka-sonko-electronics"
+name = "Baraka sonko electronics1"
 compatibility_date = "2026-02-02"
 pages_build_output_dir = "dist"
 
